--- a/Kawaii Kollections/frontend/src/Components/Hero/Hero.css
+++ b/Kawaii Kollections/frontend/src/Components/Hero/Hero.css
@@ -57,3 +57,16 @@
     justify-content: center;
     align-items: center;
 }
+
+.hero-slide-image {
+    width: 500px;
+    height: auto;
+    transition: opacity 1s ease-in-out;
+    opacity: 1;
+    animation: fade 1s ease-in-out;
+}
+
+@keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
