--- a/Kawaii Kollections/frontend/src/Pages/CSS/ShopCategory.css
+++ b/Kawaii Kollections/frontend/src/Pages/CSS/ShopCategory.css
@@ -2,6 +2,7 @@
     display: block;
     width: 82%;
     margin: 30px auto;
+    background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
 
 }
 .shopcategory-indexSort{
