--- a/Kawaii Kollections/frontend/src/Components/Navbar/Navbar.css
+++ b/Kawaii Kollections/frontend/src/Components/Navbar/Navbar.css
@@ -10,11 +10,25 @@
         gap: 10px;
         
     }
-    .nav-logo p{
+    .nav-logo-title{
+        list-style: none;
+        margin: 0;
+        padding: 0;
         color: blueviolet;
         font-size: 36px;
         font-weight: 600;
     }
+    .nav-logo-title a,
+    .nav-logo-title a:hover,
+    .nav-logo-title a:visited,
+    .nav-logo-title a:active,
+    .nav-logo-title a:focus,
+    .nav-logo-title a:focus-visible{
+      text-decoration: none;
+      color: inherit;
+      outline: none;
+    }
+
     .nav-menu{
         display: flex;
         align-items: center;
